--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
     "@vitejs/plugin-vue": "^5.0.5",
+    "@vue/eslint-config-airbnb": "^8.0.0",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/test-utils": "^2.4.6",
     "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-vue": "^9.23.0",
+    "eslint-plugin-vuejs-accessibility": "^2.3.0",
     "jsdom": "^24.1.0",
     "prettier": "^3.2.5",
+    "sass": "^1.77.6",
+    "sass-loader": "^14.2.1",
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1",
     "vitest": "^1.6.0"
